--- a/frontend/html/login.html
+++ b/frontend/html/login.html
@@ -49,7 +49,7 @@ button.addEventListener("submit", (e) => {
     password: userpassword.value
   };
 
-  fetch("http://localhost:7678/user/login", {
+  fetch("https://chitchat-x3mf.onrender.com/user/login", {
     method: "POST",
     headers: {
       "Content-Type": "application/json"
