--- a/frontend/html/signup.html
+++ b/frontend/html/signup.html
@@ -54,7 +54,7 @@
             password:userpassword.value
         }
        // console.log(userobj)
-       fetch("http://localhost:7678/user/register",{
+       fetch("https://chitchat-x3mf.onrender.com/user/register",{
         method:"POST",
         headers: {
         "Content-Type": "application/json",
